#292 - Fixed issues with accessing datatable API after initial change for horizontal scrolling; added column visibility; fixed layout issues.

--- a/assets/css/custom-styles2.css
+++ b/assets/css/custom-styles2.css
@@ -486,6 +486,9 @@ div.dataTables_wrapper {
   width: 100%;
   margin: 0 auto;
 }
+table.dataTable {
+  border: none;
+}
 table.dataTable.stripe tbody tr.odd, table.dataTable.display tbody tr.odd{
 
 }
